--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,18 @@
     color: #6600cc;
     background-color: ;
   }
+  /*
   body {
     max-width: 1200px;
+    background-repeat: round;
     background-image:url('http://www.pawsforbeer.com/wp-content/uploads/2014/05/14088267951_9274ce3aa9_b.jpg');
-
         margin: 0 auto;
-  }
+  }*/
+
+ body {
+   background: url('http://www.pawsforbeer.com/wp-content/uploads/2014/05/14088267951_9274ce3aa9_b.jpg') no-repeat center center fixed;
+   background-size: cover;
+ }
 title{
     display: center;
   }
@@ -16,11 +22,13 @@ title{
     list-style-type: none;
   }
   .myClass{
-    color: pink;
+    color: white;
+    text-align: center;
   }
 
   button{
       display:inline-block;
+      display: center;
       width: 190px;
       height: 90px;
 
