--- a/style.css
+++ b/style.css
@@ -42,3 +42,14 @@ span{
 margin-top: 0px;
 margin-left: 25%;
 }
+video.fullscreen {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  z-index: -100;
+  transform: translate(-50%, -50%);
+}
