--- a/style/layout.css
+++ b/style/layout.css
@@ -1,4 +1,8 @@
-@media only screen and (min-width: 100px);
+h1{
+  font-size: 3em;
+  font-weight:lighter;
+  padding: .1rem;
+  }
 body{
  text-align: center;
  color: #E6E0CB;
@@ -6,12 +10,12 @@ body{
  font-family: 'Raleway';
  width: 100%;
 }
-h1{
-  font-size: 100px;
-  font-weight:lighter;
+
+ div{
+    padding: 1em;
   }
-img{
-     height: 200px;
-     width: 230px;
-     border-radius: 10px;
-     }
+@media screen and (min-width: 320px){
+h1{
+  font-size: 4em;
+}
+}
