--- a/style/layout.css
+++ b/style/layout.css
@@ -1,15 +1,6 @@
-/*=========== body ==================*/
-.parallax{
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
+/*=========== div ==================*/
 p{
- height: 500px;
-}
-#about{
-  background-image: url("../images/xoom.jpg");
+ height: 100vh; /*make it devise height for responsive developement*/
 }
 #project{
   background-image: url("../images/computer.jpg");
@@ -19,4 +10,19 @@ p{
 }
 #contact{
  background-image: url("../images/typewriter.jpg");
+}
+/*======== Nav ===========*/
+nav{
+ position: absolute;
+ margin: 7em;
+ font-size: 1.2em;
+}
+nav li{
+  display: inline;
+  position: relative;
+  margin-right: 30px;
+}
+/*============================= section hello=================*/
+#about{
+ background-image: url("../images/black-and-white-parallax-test.gif");
 }
