new profolio setup

--- a/style/base.css
+++ b/style/base.css
@@ -8,4 +8,7 @@
 body{
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
+  height: 100%;
 }
+/*font-family: 'Special Elite', cursive;*/
+/*font-family: 'Love Ya Like A Sister', cursive;*/
