--- a/style/module.css
+++ b/style/module.css
@@ -1,15 +1,20 @@
-
-/*------------------* SECTION *--------------------*/
+/*------------------* SECTION #art *--------------------*/
 #about{
  width: 100%;
- /*font-family: 'Special Elite', cursive;*/
- font-family: 'Love Ya Like A Sister', cursive;
+ z-index: 2;
+}
+/*------------------* SECTION #about *--------------------*/
+#about{
+ width: 100%;
+ position: absolute;
+ top:5%;
 }
 #about h2{
   text-align: center;
   padding: 1em;
   font-size: 2.5em;
   font-weight: bold;
+  margin-top: 85%;
 }
 #about p, .connect-me{
   width: 70%;
@@ -21,7 +26,7 @@
 .connect-me li{
   display: inline-block;
   font-weight: bold;
-  padding-right: 2.5em;
+  padding-right: 0.5em;
   padding-bottom: 1em;
   color: black;
 }
@@ -29,5 +34,11 @@
 @media screen and (min-width: 450px) {
   #about{
     width: 50%;
+  }
+  .connect-me li{
+    padding-right: 1.5em;
+  }
+  .connect-me li:last-child{
+    padding-right: 0em;
   }
 }
