--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -17,3 +17,6 @@
 
 
 // :::: COMPONENT :::: //
+@import '../component/about/about.scss';
+@import '../component/my-header/my-header.scss';
+@import '../component/art/art.scss';
