--- a/app/scss/lib/base/_base.scss
+++ b/app/scss/lib/base/_base.scss
@@ -1,7 +1,3 @@
-html{
-  min-height: 100%;
-  min-width: 100%;
-}
 *{
   margin: 0;
   padding: 0;
@@ -14,20 +10,11 @@ body{
   font-family: 'Nunito', sans-serif;
   font-weight: 800;
   font-size: 1.25em;
-  height: 100%;
   color: #000;
 }
 /*font-family: 'Special Elite', cursive;*/
 /*font-family: 'Love Ya Like A Sister', cursive;*/
-
-*{
-  -webkit-transform: rotate(90deg);
-   -moz-transform: rotate(90deg);
-   -o-transform: rotate(90deg);
-   -ms-transform: rotate(90deg);
-   transform: rotate(90deg);
-}
-
+html, body { height: 100%; width: 100%; margin: 0; }
 /*=========== section =================*/
 section{
   height: 90vh;
@@ -41,7 +28,5 @@ text-align: center;
 
 
 @media screen and (min-width: 450px) {
-header li:first-child{
-  text-align: center;
-}
+
 }
