webpack working again

--- a/app/view/home/_home.scss
+++ b/app/view/home/_home.scss
@@ -1,5 +1,6 @@
 @import './../scss/lib/theme/vars';
 .home{
-  height: 100px;
-  width: 100px;
+  height: 100%;
+  width: 90%;
+  margin-left: 5%;
 }
