--- a/app/component/my-header/_my-header.scss
+++ b/app/component/my-header/_my-header.scss
@@ -4,8 +4,11 @@
    -o-transform: rotate(-90deg);
    -ms-transform: rotate(-90deg);
    transform: rotate(-90deg);
-background-color: orange;
+background-color: pink;
+
    li{
      text-align: center;
    }
+   width: 100%;
+   height: 10%;
 }
