--- a/app/component/about/about.html
+++ b/app/component/about/about.html
@@ -1,8 +1,8 @@
-<section id="about">
+<section class="about">
   <h2>Bhavya Bharti</h2>
   <p>
     I'm freelancer full stack developer living in Seattle WA.
-    I have strong technial knowledge with good experiance in
+    I have strong technical knowledge with good experiance in
     back end and frontend design. I spend my days designing systematic
     methods to help humans interact with digital interfaces in a clean,
     modern, and usable manner.
