--- a/app/view/home/home.html
+++ b/app/view/home/home.html
@@ -1,10 +1,4 @@
 <section class="home">
-  <my-header><my-header>
-  <about></about>
-  <footer>
-  <ul>
-    <li>©</li>
-    <li>Bhavya Bharti</li>
-  </ul>
-  </footer>
+<about ng-show="homeCtrl.aboutShow"></about>
+  <my-header aboutShow="homeCtrl.aboutShow"><my-header>
 </section>
