--- a/app/component/my-header/_my-header.scss
+++ b/app/component/my-header/_my-header.scss
@@ -1,14 +1,22 @@
 .my-header{
-   -webkit-transform: rotate(-90deg);
-   -moz-transform: rotate(-90deg);
-   -o-transform: rotate(-90deg);
-   -ms-transform: rotate(-90deg);
-   transform: rotate(-90deg);
-background-color: pink;
 
    li{
      text-align: center;
    }
    width: 100%;
    height: 10%;
+}
+
+
+@media screen and (min-width: 450px) {
+
+    .my-header{
+      position: absolute;
+      -ms-transform: rotate(-90deg); /* IE 9 */
+      -webkit-transform: rotate(-90deg); /* Chrome, Safari, Opera */
+      transform: rotate(-90deg);
+      top: 40%;
+      width: 25%;
+      height: -1%;
+    }
 }
