--- a/app/view/home/home.html
+++ b/app/view/home/home.html
@@ -1,4 +1,4 @@
 <section class="home">
-<about ng-show="homeCtrl.aboutShow"></about>
+<about class="collapse" ng-show="homeCtrl.aboutShow"></about>
   <my-header aboutShow="homeCtrl.aboutShow"><my-header>
 </section>
