bootstrap is working

--- a/app/component/about/about.html
+++ b/app/component/about/about.html
@@ -1,4 +1,6 @@
 <section class="about">
+  <div class="horizontal-collapse" uib-collapse="isCollapsedHorizontal" horizontal>
+		<div class="well well-lg">
   <h2>Bhavya Bharti</h2>
   <p>
     I'm freelancer full stack developer living in Seattle WA.
@@ -12,4 +14,6 @@
     <li>LinkedIn</li>
     <li>Blogs</li>
   </ul>
+</div>
+</div>
 </section>
