--- a/app/component/about/_about.scss
+++ b/app/component/about/_about.scss
@@ -23,6 +23,13 @@
   padding-bottom: 1em;
   color: black;
 }
+.horizontal-collapse {
+    height: 170px;
+    width: 100%;
+  }
+  .navbar-collapse.in {
+     overflow-y: hidden;
+   }
 }
 @media screen and (min-width: 450px) {
   .about{
