--- a/app/component/my-header/my-header.html
+++ b/app/component/my-header/my-header.html
@@ -1,4 +1,4 @@
 <section class="my-header">
-  <li ng-click="aboutShow=!aboutShow" ng-if="aboutShow">About</li>
-  <li data-toggle="collapse" data-target=".about">Close</li>
+  <li>About</li>
+  <button type="button" class="btn btn-info" ng-click="isCollapsedHorizontal = !isCollapsedHorizontal">Toggle collapse Horizontally</button>
 </section >
