collapse working fine

--- a/app/component/about/_about.scss
+++ b/app/component/about/_about.scss
@@ -23,6 +23,9 @@
   padding-bottom: 1em;
   color: black;
 }
+.horizontal-collapse {
+   height: 70px;
+ }
 }
 @media screen and (min-width: 450px) {
   .about{
