--- a/app/view/home/home.html
+++ b/app/view/home/home.html
@@ -1,4 +1,4 @@
 <section class="home">
-  <about></about>
-  <my-header><my-header>
+  <about class="horizontal-collapse" uib-collapse="homeCtrl.isCollapsedHorizontal" horizontal></about>
+  <my-header isCollapsedHorizontal="homeCtrl.isCollapsedHorizontal"><my-header>
 </section>
