--- a/app/component/about/about.html
+++ b/app/component/about/about.html
@@ -1,4 +1,4 @@
-<section class="about">
+<section class="about fade-in-left">
   <h2>Bhavya Bharti</h2>
   <p>
     I'm freelancer full stack developer living in Seattle WA.
@@ -12,12 +12,4 @@
     <li>LinkedIn</li>
     <li>Blogs</li>
   </ul>
-
-  <button
-  ng-click="aboutCtrl.isCollapsedHorizontal = !aboutCtrl.isCollapsedHorizontal">
-  Toggle collapse Horizontally</button>
-	<div class="horizontal-collapse"
-  uib-collapse="aboutCtrl.isCollapsedHorizontal" horizontal>
-	   <div>Some content</div>
-  </div>
 </section>
