--- a/app/component/my-header/my-header.html
+++ b/app/component/my-header/my-header.html
@@ -1,3 +1,3 @@
 <section class="my-header">
-  <li ng-click="isCollapsedHorizontal = !isCollapsedHorizontal">About</li>
+  <li ng-click="myHeaderCtrl.showAbout()">About</li>
 </section >
