about show and revail works ok

--- a/app/component/about/about.html
+++ b/app/component/about/about.html
@@ -1,4 +1,5 @@
-<section class="about fade-in-left">
+<section class="about">
+  <div class="visibility"></div>
   <h2>Bhavya Bharti</h2>
   <p>
     I'm freelancer full stack developer living in Seattle WA.
