--- a/app/view/home/home.html
+++ b/app/view/home/home.html
@@ -1,4 +1,4 @@
 <section class="home">
-  <about></about>
+  <about ng-show="!homeCtrl.isCollapsedHorizontal"></about>
   <my-header is-collapsed-horizontal="homeCtrl.isCollapsedHorizontal"><my-header>
 </section>
