--- a/app/component/about/about.html
+++ b/app/component/about/about.html
@@ -1,5 +1,5 @@
 <section class="about">
-  <div class="visibility"></div>
+  <div class="visibility"><li>top</li></div>
   <h2>Bhavya Bharti</h2>
   <p>
     I'm freelancer full stack developer living in Seattle WA.
