--- a/app/view/home/_home.scss
+++ b/app/view/home/_home.scss
@@ -1,5 +1,6 @@
 @import './../scss/lib/theme/vars';
 .home{
-  height: 95%;
-  width: 100%;
+  height: $section-height;
+  width: $section-width;
+  background-color: orange;
 }
