--- a/app/component/about/about.html
+++ b/app/component/about/about.html
@@ -1,5 +1,5 @@
 <section class="about">
-  <div class="visibility"><li>top</li></div>
+  <div class="visibility"><li></li></div>
   <h2>Bhavya Bharti</h2>
   <p>
     I'm freelancer full stack developer living in Seattle WA.
@@ -9,8 +9,8 @@
     modern, and usable manner.
   </p>
   <ul class="connect-me">
-    <li>say hi</li>
-    <li>LinkedIn</li>
-    <li>Blogs</li>
+    <li><a href="mailto:bhavyab@outlook.com" target="_blank">say hi</a></li>
+    <li><a href="https://www.linkedin.com/in/bhavyabharti/" target="_blank">LinkedIn</a></li>
+    <!-- <li><a href="mailto:bhavyab@outlook.com" target="_blank">Blogs</a></li> -->
   </ul>
 </section>
