--- a/app/scss/lib/theme/_vars.scss
+++ b/app/scss/lib/theme/_vars.scss
@@ -1,5 +1,9 @@
 
 
-$backgroundColor : #fff;
-$section-width: 100%;
-$section-height: 95%;
+$white : #fff;
+$section-width: 100vw;
+$section-height: 95vh;
+$black: #000;
+
+$gutter: 5%;
+$art_color: orange;
