--- a/app/component/my-header/_my-header.scss
+++ b/app/component/my-header/_my-header.scss
@@ -14,7 +14,6 @@
       position: absolute;
       transform: rotate(-90deg);
       top: 40%;
-      width: 25%;
-      height: -1%;
+      width: $gutter * 4;
     }
 }
