--- a/app/scss/lib/base/_base.scss
+++ b/app/scss/lib/base/_base.scss
@@ -15,6 +15,11 @@ body{
 /*font-family: 'Special Elite', cursive;*/
 /*font-family: 'Love Ya Like A Sister', cursive;*/
 html, body { height: 100%; width: 100%; margin: 0; }
+
+a{
+  text-decoration: none;
+  color: inherit;
+}
 /*=========== footer ==================*/
 footer{
 width: 100%;
