--- a/app/component/about/_about.scss
+++ b/app/component/about/_about.scss
@@ -14,7 +14,7 @@
 
  p, .connect-me{
   width: 70%;
-  margin-left: $gutter;
+  margin-left: $gutter * 3;
   text-align: justify;
   margin-top: $gutter;
   color: gray;
