--- a/app/component/about/about.html
+++ b/app/component/about/about.html
@@ -9,8 +9,8 @@
     modern, and usable manner.
   </p>
   <ul class="connect-me">
-    <li><a href="mailto:bhavyab@outlook.com" target="_blank">say hi</a></li>
-    <li><a href="https://www.linkedin.com/in/bhavyabharti/" target="_blank">LinkedIn</a></li>
-    <!-- <li><a href="mailto:bhavyab@outlook.com" target="_blank">Blogs</a></li> -->
+    <li><a class="underline" href="mailto:bhavyab@outlook.com" target="_blank">say hi</a></li>
+    <li><a class="underline" href="https://www.linkedin.com/in/bhavyabharti/" target="_blank">LinkedIn</a></li>
+    <!-- <li><a class="underline" href="mailto:bhavyab@outlook.com" target="_blank">Blogs</a></li> -->
   </ul>
 </section>
