--- a/app/component/my-header/_my-header.scss
+++ b/app/component/my-header/_my-header.scss
@@ -14,6 +14,13 @@
       position: absolute;
       transform: rotate(-90deg);
       top: 40%;
-      width: $gutter * 4;
+      width: $gutter * 2;
+      height: $gutter * 3;
+      left: $gutter * 2;
     }
+}
+@media screen and (min-width: 900px) {
+  .my-header{
+    width: $gutter * 2;
+  }
 }
