--- a/app/component/about/about.html
+++ b/app/component/about/about.html
@@ -1,16 +1,17 @@
 <section class="about">
   <div class="visibility"><li></li></div>
   <h2>Bhavya Bharti</h2>
+  <p>Hey, Thank you for visiting my profile. I'll keep it short and sweet...</p>
   <p>
     I'm freelancer full stack developer living in Seattle WA.
     I have strong technical knowledge with good experiance in
-    back end and frontend design. I spend my days designing systematic
-    methods to help humans interact with digital interfaces in a clean,
+    javascript back end and frontend developement. I spend my days
+    developing apps or websites to help humans solve there problems in a clean,
     modern, and usable manner.
   </p>
   <ul class="connect-me">
-    <li><a class="underline" href="mailto:bhavyab@outlook.com" target="_blank">say hi</a></li>
-    <li><a class="underline" href="https://www.linkedin.com/in/bhavyabharti/" target="_blank">LinkedIn</a></li>
+    <li>I'm here :)  <a class="underline" href="mailto:bhavyab@outlook.com" target="_blank">say hi</a></li>
+    <li>Visit me on  <a class="underline" href="https://www.linkedin.com/in/bhavyabharti/" target="_blank">LinkedIn</a></li>
     <!-- <li><a class="underline" href="mailto:bhavyab@outlook.com" target="_blank">Blogs</a></li> -->
   </ul>
 </section>
