--- a/app/component/art/_art.scss
+++ b/app/component/art/_art.scss
@@ -1,3 +1,53 @@
+@import './../scss/lib/theme/vars';
+
 .art{
+  width: 80vw;
+  height: 85vh;
+  position: absolute;
+  top: $gutter;
+  left: $gutter * 2;
+  background-size: .12em 100%;
+  font: 10em/1 Arial;
+
+$colors: #360745, #D61C59, #E7D84B, #EFEAC5, #1B8798;
+
+.text--line {
+  font-size: .5em;
+  }
+.text--line-w{
+font-size: 0.3em;
+}
+svg {
+    width: 100%;
+    height: 100%;
+  }
+
+$max: 5;
+$stroke-step: 7%;
+.text-copy {
+  fill: none;
+  stroke: white;
+  stroke-dasharray: $stroke-step $stroke-step * ($max - 1);
+  stroke-width: 3px;
+
+  animation: stroke-offset 8s infinite linear;
+
+  @for $item from 1 through $max {
+    $stroke-color: nth($colors, $item);
+
+    &:nth-child(#{$item}) {
+      stroke: $stroke-color;
+      stroke-dashoffset: $stroke-step * $item;
+      }
+    }
+  }
+
+@keyframes stroke-offset {
+  50% {
+    stroke-dashoffset: $stroke-step * $max;
+    stroke-dasharray: 0 $stroke-step * $max*2.5;
+  }
+}
+
 
 }
