--- a/app/component/art/art.html
+++ b/app/component/art/art.html
@@ -1,3 +1,43 @@
 <section class="art">
-  <canvas id="can"></canvas>
+  <!-- <canvas id="myCanvas"></canvas> -->
+  <svg>
+  <symbol id="s-text">
+    <text text-anchor="middle"
+          x="50%"
+          y="35%"
+          class="text--line"
+          >
+      Hello there ...
+    </text>
+    <text text-anchor="middle"
+          x="50%"
+          y="58%"
+          class="text--line2"
+          >
+      Bhavya
+    </text>
+    <text text-anchor="middle"
+          x="50%"
+          y="70%"
+          class="text--line-w"
+          >
+      Web Dev
+    </text>
+  </symbol>
+
+  <g class="g-ants">
+    <use xlink:href="#s-text"
+      class="text-copy"></use>
+    <use xlink:href="#s-text"
+      class="text-copy"></use>
+    <use xlink:href="#s-text"
+      class="text-copy"></use>
+    <use xlink:href="#s-text"
+      class="text-copy"></use>
+    <use xlink:href="#s-text"
+      class="text-copy"></use>
+  </g>
+
+
+</svg>
 </section>
