title info change

--- a/app/scss/lib/base/_base.scss
+++ b/app/scss/lib/base/_base.scss
@@ -11,10 +11,8 @@ body{
   font-weight: 800;
   font-size: 1.25em;
   color: #000;
+  font-weight: 100;
 }
-/*font-family: 'Special Elite', cursive;*/
-/*font-family: 'Love Ya Like A Sister', cursive;*/
-html, body { height: 100%; width: 100%; margin: 0; }
 
 a{
   text-decoration: none;
